initial v2 migration
Migrate to nucleus, graalvm builds, new core backend